# sqlsherlock

./: Cargo.toml  Dockerfile  deny.toml  justfile
.github/workflows/: ci.yml
docs/: README.md  package.json
docs/.vuepress/: config.toml
docs/.vuepress/styles/: palette.styl
docs/configuration/: cli-args.md
docs/guide/: installation.md
src/: lib.rs  main.rs
src/mysql/: gen.rs  mod.rs  models.rs  schema.rs  v5_6.rs  v5_7.rs  v8_0.rs
src/postgres/: functions.rs  gen.rs  mod.rs  models.rs  schema.rs  v10.rs  v11.rs  v12.rs  v9_5.rs  v9_6.rs
src/sqlite/: gen.rs  mod.rs  models.rs  schema.rs  words.rs
