[package]
name = "sqlsherlock"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
crossterm = "0.17.7"
diesel = "1.4.5"
dotenv = "0.15.0"
itertools = "0.9.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
structopt = "0.3.15"

kuchiki = { version = "0.8.0", optional = true }
quote = { version = "1.0.7", optional = true }
rayon = { version = "1.3.1", optional = true }
ureq = { version = "1.3.0", optional = true }

[features]
default = ["mysql", "postgres", "sqlite"]
gen = ["kuchiki", "quote", "rayon", "ureq"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]

[profile.release]
lto = true
panic = "abort"
