[package]
name = "sqlsherlock"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.1", features = ["derive"] }
crossterm = "0.22.1"
diesel = "1.4.8"
dotenv = "0.15.0"
itertools = "0.10.3"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

kuchiki = { version = "0.8.1", optional = true }
quote = { version = "1.0.14", optional = true }
rayon = { version = "1.5.1", optional = true }
ureq = { version = "2.4.0", optional = true }

[features]
default = ["mysql", "postgres", "sqlite"]
gen = ["kuchiki", "quote", "rayon", "ureq"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]

[profile.release]
lto = true
panic = "abort"
