[package]
name = "sqlsherlock"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.2"
diesel = "1.4.8"
dotenv = "0.15.0"
itertools = "0.10.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

kuchiki = { version = "0.8.1", optional = true }
quote = { version = "1.0.18", optional = true }
rayon = { version = "1.5.3", optional = true }
ureq = { version = "2.4.0", optional = true }

[features]
default = ["mysql", "postgres", "sqlite"]
gen = ["kuchiki", "quote", "rayon", "ureq"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]

[profile.release]
lto = true
strip = true
